bin/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On WHILE shift to state 1
-- On PRINTLN shift to state 44
-- On PRINT shift to state 46
-- On IF shift to state 48
-- On IDENT shift to state 9
-- On FOR shift to state 53
-- On statement shift to state 62
-- On program shift to state 115
-- On list(statement) shift to state 116
-- On incomplete_statement shift to state 64
-- On ident shift to state 66
## Reductions:
-- On EOF
--   reduce production list(statement) ->

State 1:
## Known stack suffix:
## WHILE
## LR(1) items:
statement -> WHILE . LPAREN expression RPAREN LCURLY list(statement) RCURLY [ WHILE RCURLY PRINTLN PRINT IF IDENT FOR EOF ]
## Transitions:
-- On LPAREN shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## WHILE LPAREN
## LR(1) items:
statement -> WHILE LPAREN . expression RPAREN LCURLY list(statement) RCURLY [ WHILE RCURLY PRINTLN PRINT IF IDENT FOR EOF ]
## Transitions:
-- On STRING_LIT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPAREN shift to state 7
-- On INT_LIT shift to state 8
-- On IDENT shift to state 9
-- On BOOL_LIT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 41
## Reductions:

State 3:
## Known stack suffix:
## STRING_LIT
## LR(1) items:
expression -> STRING_LIT . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
## Reductions:
-- On TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND
--   reduce production expression -> STRING_LIT

State 4:
## Known stack suffix:
## NOT
## LR(1) items:
expression -> NOT . expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On STRING_LIT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPAREN shift to state 7
-- On INT_LIT shift to state 8
-- On IDENT shift to state 9
-- On BOOL_LIT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 40
## Reductions:

State 5:
## Known stack suffix:
## MINUS
## LR(1) items:
expression -> MINUS . INT_LIT [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On INT_LIT shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## MINUS INT_LIT
## LR(1) items:
expression -> MINUS INT_LIT . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
## Reductions:
-- On TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND
--   reduce production expression -> MINUS INT_LIT

State 7:
## Known stack suffix:
## LPAREN
## LR(1) items:
expression -> LPAREN . expression RPAREN [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On STRING_LIT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPAREN shift to state 7
-- On INT_LIT shift to state 8
-- On IDENT shift to state 9
-- On BOOL_LIT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 12
## Reductions:

State 8:
## Known stack suffix:
## INT_LIT
## LR(1) items:
expression -> INT_LIT . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
## Reductions:
-- On TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND
--   reduce production expression -> INT_LIT

State 9:
## Known stack suffix:
## IDENT
## LR(1) items:
ident -> IDENT . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LPAREN LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS ASSIGN_EQUALS AND ]
## Transitions:
## Reductions:
-- On TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LPAREN LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS ASSIGN_EQUALS AND
--   reduce production ident -> IDENT

State 10:
## Known stack suffix:
## BOOL_LIT
## LR(1) items:
expression -> BOOL_LIT . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
## Reductions:
-- On TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND
--   reduce production expression -> BOOL_LIT

State 11:
## Known stack suffix:
## ident
## LR(1) items:
expression -> ident . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
## Reductions:
-- On TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND
--   reduce production expression -> ident

State 12:
## Known stack suffix:
## LPAREN expression
## LR(1) items:
expression -> expression . PLUS expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . MINUS expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . TIMES expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . DIV expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . LESS_EQ expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . GREATER_EQ expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . LESS expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . GREATER expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . AND expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . OR expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . BOOL_EQUALS expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . TERNARY_QUESTIONMARK expression TERNARY_COLON expression [ TIMES TERNARY_QUESTIONMARK RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> LPAREN expression . RPAREN [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On TIMES shift to state 13
-- On TERNARY_QUESTIONMARK shift to state 17
-- On RPAREN shift to state 39
-- On PLUS shift to state 21
-- On OR shift to state 25
-- On MINUS shift to state 27
-- On LESS_EQ shift to state 15
-- On LESS shift to state 23
-- On GREATER_EQ shift to state 29
-- On GREATER shift to state 31
-- On DIV shift to state 33
-- On BOOL_EQUALS shift to state 35
-- On AND shift to state 37
## Reductions:

State 13:
## Known stack suffix:
## expression TIMES
## LR(1) items:
expression -> expression TIMES . expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On STRING_LIT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPAREN shift to state 7
-- On INT_LIT shift to state 8
-- On IDENT shift to state 9
-- On BOOL_LIT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## expression TIMES expression
## LR(1) items:
expression -> expression . PLUS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . MINUS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . TIMES expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression TIMES expression . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . DIV expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . LESS_EQ expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . GREATER_EQ expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . LESS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . GREATER expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . AND expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . OR expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . BOOL_EQUALS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . TERNARY_QUESTIONMARK expression TERNARY_COLON expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On LESS_EQ shift to state 15
-- On LESS shift to state 23
-- On GREATER_EQ shift to state 29
-- On GREATER shift to state 31
## Reductions:
-- On TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND
--   reduce production expression -> expression TIMES expression
** Conflict on LESS_EQ LESS GREATER_EQ GREATER

State 15:
## Known stack suffix:
## expression LESS_EQ
## LR(1) items:
expression -> expression LESS_EQ . expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On STRING_LIT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPAREN shift to state 7
-- On INT_LIT shift to state 8
-- On IDENT shift to state 9
-- On BOOL_LIT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## expression LESS_EQ expression
## LR(1) items:
expression -> expression . PLUS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . MINUS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . TIMES expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . DIV expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . LESS_EQ expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression LESS_EQ expression . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . GREATER_EQ expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . LESS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . GREATER expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . AND expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . OR expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . BOOL_EQUALS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . TERNARY_QUESTIONMARK expression TERNARY_COLON expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On TIMES shift to state 13
-- On TERNARY_QUESTIONMARK shift to state 17
-- On PLUS shift to state 21
-- On OR shift to state 25
-- On MINUS shift to state 27
-- On LESS_EQ shift to state 15
-- On LESS shift to state 23
-- On GREATER_EQ shift to state 29
-- On GREATER shift to state 31
-- On DIV shift to state 33
-- On BOOL_EQUALS shift to state 35
-- On AND shift to state 37
## Reductions:
-- On TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND
--   reduce production expression -> expression LESS_EQ expression
** Conflict on TIMES TERNARY_QUESTIONMARK PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND

State 17:
## Known stack suffix:
## expression TERNARY_QUESTIONMARK
## LR(1) items:
expression -> expression TERNARY_QUESTIONMARK . expression TERNARY_COLON expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On STRING_LIT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPAREN shift to state 7
-- On INT_LIT shift to state 8
-- On IDENT shift to state 9
-- On BOOL_LIT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## expression TERNARY_QUESTIONMARK expression
## LR(1) items:
expression -> expression . PLUS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . MINUS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . TIMES expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . DIV expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . LESS_EQ expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . GREATER_EQ expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . LESS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . GREATER expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . AND expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . OR expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . BOOL_EQUALS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression . TERNARY_QUESTIONMARK expression TERNARY_COLON expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER DIV BOOL_EQUALS AND ]
expression -> expression TERNARY_QUESTIONMARK expression . TERNARY_COLON expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On TIMES shift to state 13
-- On TERNARY_QUESTIONMARK shift to state 17
-- On TERNARY_COLON shift to state 19
-- On PLUS shift to state 21
-- On OR shift to state 25
-- On MINUS shift to state 27
-- On LESS_EQ shift to state 15
-- On LESS shift to state 23
-- On GREATER_EQ shift to state 29
-- On GREATER shift to state 31
-- On DIV shift to state 33
-- On BOOL_EQUALS shift to state 35
-- On AND shift to state 37
## Reductions:

State 19:
## Known stack suffix:
## expression TERNARY_QUESTIONMARK expression TERNARY_COLON
## LR(1) items:
expression -> expression TERNARY_QUESTIONMARK expression TERNARY_COLON . expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On STRING_LIT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPAREN shift to state 7
-- On INT_LIT shift to state 8
-- On IDENT shift to state 9
-- On BOOL_LIT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## expression TERNARY_QUESTIONMARK expression TERNARY_COLON expression
## LR(1) items:
expression -> expression . PLUS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . MINUS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . TIMES expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . DIV expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . LESS_EQ expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . GREATER_EQ expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . LESS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . GREATER expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . AND expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . OR expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . BOOL_EQUALS expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression . TERNARY_QUESTIONMARK expression TERNARY_COLON expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
expression -> expression TERNARY_QUESTIONMARK expression TERNARY_COLON expression . [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On TIMES shift to state 13
-- On PLUS shift to state 21
-- On OR shift to state 25
-- On MINUS shift to state 27
-- On LESS_EQ shift to state 15
-- On LESS shift to state 23
-- On GREATER_EQ shift to state 29
-- On GREATER shift to state 31
-- On DIV shift to state 33
-- On BOOL_EQUALS shift to state 35
-- On AND shift to state 37
## Reductions:
-- On TERNARY_QUESTIONMARK TERNARY_COLON RPAREN LESS_EQ LESS GREATER_EQ GREATER ENDLINE COMMA
--   reduce production expression -> expression TERNARY_QUESTIONMARK expression TERNARY_COLON expression
** Conflict on LESS_EQ LESS GREATER_EQ GREATER

State 21:
## Known stack suffix:
## expression PLUS
## LR(1) items:
expression -> expression PLUS . expression [ TIMES TERNARY_QUESTIONMARK TERNARY_COLON RPAREN PLUS OR MINUS LESS_EQ LESS GREATER_EQ GREATER ENDLINE DIV COMMA BOOL_EQUALS AND ]
## Transitions:
-- On STRING_LIT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPAREN shift to state 7
-- On INT_LIT shift to state 8
-- On IDENT shift to state 9
-- On BOOL_LIT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 22
## Reductions:
